Implemented refresh menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MonitorErrorApp</string>
     <string name="try_again">Try Again</string>
+    <string name="menu_refresh">Refresh</string>
 </resources>
