--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
 
     <string name="select_hour">Select time interval in hour</string>
     <string name="filter">Filter</string>
-    <string name="ops_error_info"><![CDATA[Total of <font color=\'#cc0029\'>%1$d</font> type of sources errors in %2$d hour(s)]]></string>
-    <string name="total_of_exceptions"><![CDATA[<font color=\'#cc0029\'>%1$d</font> exceptions]]></string>
-    <string name="ops_error_details_info"><![CDATA[Total of <font color=\'#cc0029\'>%1$d</font> exceptions in %2$d hour(s)]]></string>
+    <string name="ops_error_info"><![CDATA[<font color=\'#cc0029\'>%1$d</font> sources of errors in %2$d hour(s)]]></string>
+    <string name="total_of_exceptions"><![CDATA[<font color=\'#cc0029\'>%1$d</font> exceptions.]]></string>
+    <string name="ops_error_details_info"><![CDATA[<font color=\'#cc0029\'>%1$d</font> exceptions in %2$d hour(s)]]></string>
 
 </resources>
